WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191651
[Curl] HTTP Body is missing with redirection.
https://bugs.webkit.org/show_bug.cgi?id=191651
Summary
[Curl] HTTP Body is missing with redirection.
Basuke Suzuki
Reported
2018-11-14 12:57:43 PST
When sending a request with HTTP Body on POST, and receive 307 "Temporary Redirect", http body is not be on new request. Will implement ResourceRequest::updateFromDelegatePreservingOldProperties .
Attachments
Patch
(7.18 KB, patch)
2019-02-28 00:25 PST
,
Takashi Komori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Takashi Komori
Comment 1
2019-02-28 00:25:53 PST
Created
attachment 363199
[details]
Patch
Takashi Komori
Comment 2
2019-02-28 00:28:18 PST
Implement updateFromDelegatePreservingOldProperties for curl port. This patch fixes some post tests.
Basuke Suzuki
Comment 3
2019-02-28 10:16:52 PST
Comment on
attachment 363199
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=363199&action=review
This is just an informal review, but looks good to me.
> Source/WebCore/platform/network/curl/ResourceRequestCurl.cpp:34 > +void ResourceRequest::updateFromDelegatePreservingOldProperties(const ResourceRequest& delegateProvidedRequest)
This seems identical to CFNet port and good catch to align with other network port. Thank you.
WebKit Commit Bot
Comment 4
2019-02-28 10:44:55 PST
Comment on
attachment 363199
[details]
Patch Clearing flags on attachment: 363199 Committed
r242207
: <
https://trac.webkit.org/changeset/242207
>
WebKit Commit Bot
Comment 5
2019-02-28 10:44:56 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-02-28 10:45:44 PST
<
rdar://problem/48479924
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug