[Curl] HTTP Body is missing with redirection. https://bugs.webkit.org/show_bug.cgi?id=191651

Patch by Takashi Komori <Takashi.Komori@sony.com> on 2019-02-28
Reviewed by Don Olmstead.

Source/WebCore:

Implement updateFromDelegatePreservingOldProperties for curl port.

Tests: http/tests/navigation/post-301-response.html
       http/tests/navigation/post-302-response.html
       http/tests/navigation/post-303-response.html
       http/tests/navigation/post-307-response.html
       http/tests/navigation/post-308-response.html

* platform/Curl.cmake:
* platform/network/curl/ResourceRequest.h:
(WebCore::ResourceRequest::updateFromDelegatePreservingOldProperties): Deleted.
* platform/network/curl/ResourceRequestCurl.cpp: Added.
(WebCore::ResourceRequest::updateFromDelegatePreservingOldProperties):

LayoutTests:

* platform/wincairo/TestExpectations:

Canonical link: https://commits.webkit.org/209498@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242207 268f45cc-cd09-0410-ab3c-d52691b4dbfc